C: Fix alignment of unit box & YOU SAVE box (fixes #4)

--- a/bulk_c.css
+++ b/bulk_c.css
@@ -1,4 +1,3 @@
-
 #whenYouBuy {
     color: white;
     font-size: 18px;
@@ -7,21 +6,21 @@
 }
 
 /* header */
-div#outline > header {
+div#outline>header {
     background-color: black;
     color: white;
     padding: 6px;
     font-family: "Clarendon";
-    font-weight:100;
+    font-weight: 100;
 }
 
-    div#outline > header > span {
-        color: green;
-        font-family: 'Trade Gothic Condensed';
-    }
+div#outline>header>span {
+    color: green;
+    font-family: 'Trade Gothic Condensed';
+}
 
-div#outline > footer{
-    grid-template-columns: 160px auto;
+div#outline>footer>#rightBox {
+    margin-left: 20px;
 }
 
 #altDescription {
@@ -34,6 +33,7 @@ div#outline > footer{
     padding-top: 10px;
     font-family: "Trade Gothic Condensed";
 }
+
 #unitType {
     font-size: 16px;
     font-weight: normal;
@@ -59,14 +59,15 @@ div#outline > footer{
     top: -2px;
     font-family: "Trade Gothic Condensed";
     border-bottom: 1px solid black;
-    width:70px;
+    width: 70px;
 }
 
-.retail-price{
+.retail-price {
     font-family: "Trade Gothic Condensed";
     margin-left: 35px;
     font-size: 12px;
 }
+
 #youSaveBoxDiv {
     position: relative;
 }
@@ -76,19 +77,20 @@ div#outline > footer{
     position: relative;
 }
 
-.with-adv{
-   font-family: "Trade Gothic Bold";
-   font-size: 15px;
-   position: relative;
-   bottom: 30px;
+.with-adv {
+    font-family: "Trade Gothic Bold";
+    font-size: 15px;
+    position: relative;
+    bottom: 30px;
 }
 
-.with-adv span{
+.with-adv span {
     font-family: "Clarendon";
     font-weight: 600;
 }
-.yousave{
-    color:white;
+
+.yousave {
+    color: white;
     font-family: "Trade Gothic Bold";
     text-align: left;
     padding-left: 3px;
@@ -101,22 +103,24 @@ div#outline > footer{
     position: relative;
     top: 17px;
 }
+
 #youSaveImg {
     display: grid;
     background-color: black;
     width: 170px;
-    height:42px;
+    height: 42px;
 }
 
-#rightBox{
+#rightBox {
     position: relative;
-    bottom:20px;
+    bottom: 20px;
 }
-.with-adv{
+
+.with-adv {
     bottom: 0px;
 }
 
-.section-header #outline input{
+.section-header #outline input {
     text-align: center;
     vertical-align: middle;
     font-family: 'Clarendon';
@@ -126,25 +130,25 @@ div#outline > footer{
     scale: 0.9;
 }
 
-.section-header.hidden #new-section-btn{
+.section-header.hidden #new-section-btn {
     margin-bottom: -10px;
 }
 
 @media screen {
-    #outline{
+    #outline {
         margin-left: 0px;
     }
 }
 
 @media print {
-    div#outline{
+    div#outline {
         page-break-before: always;
         padding-top: calc((517px - 337px) / 2);
         padding-bottom: calc((517px - 337px) / 2);
         margin-left: -20px;
     }
 
-    @page{
+    @page {
         margin-top: -1.1cm;
         margin-left: 80px;
     }
